--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -17,7 +17,8 @@
                 "ms-python.python",
                 "github.vscode-pull-request-github",
                 "ryanluker.vscode-coverage-gutters",
-                "ms-python.vscode-pylance"
+                "ms-python.vscode-pylance",
+                "jerrygoyal.shortcut-menu-bar"
             ],
             "settings": {
                 "files.eol": "\n",
